<resources>
    <string name="app_name">Location Reminders</string>
    <string name="welcome_to_the_location_reminder_app">Location Reminder App</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_description">Description</string>
    <string name="location_reminder">Location Reminder</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="save_reminder">Your Reminder has been Saved</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="zoom_in">Zoom In</string>
    <!--    Maps-->
    <string name="dropped_pin">Dropped Pin</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="latitude_longitude">Latitude: %1$.5f, Longitude: %2$.5f</string>
    <!--    Errors-->
    <string name="no_data">No Data</string>
    <string name="error_enter_title">Please Enter a Title for Your Reminder!</string>
    <string name="error_enter_location">Please Select a Location for your Reminder!</string>
    <string name="error_location_required">Location services must be Enabled to use the Location Reminders application.</string>
    <string name="permission_denied">You need to grant Location permissions in order to be able to select the location.</string>
</resources>
